--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
-        api:
+        api_user:
             pattern:   ^/api/users
             stateless: true
             provider: app_user_provider
